Bug 1735375 - Always reflow fieldset when its available bsize is constrained. r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D128308